--- a/Style/style.css
+++ b/Style/style.css
@@ -4,8 +4,10 @@
 }
 
 body {
-	margin: 0;
+	background: rgb(117,255,131);
+	background: linear-gradient(90deg, rgba(117,255,131,1) 30%, rgba(3,128,155,1) 100%);
 }
+
 
 * {
 	margin: 0;
@@ -51,6 +53,8 @@ button {
 	padding: 0.5em;
 	margin-top: 1em;
 	margin-bottom: 1em;
+	background-color: #03809B;
+	border-radius: 10px;
 }
 
 input {
@@ -67,5 +71,8 @@ input::placeholder {
 }
 
 footer {
-	margin: 2em;
+	background-color: white;
+	width: 100%;
+	height: 30vh;
+
 }
