--- a/Style/style.css
+++ b/Style/style.css
@@ -6,6 +6,13 @@
 body {
 	background: rgb(117,255,131);
 	background: linear-gradient(90deg, rgba(117,255,131,1) 30%, rgba(3,128,155,1) 100%);
+	display: flex;
+	flex-direction: column;
+}
+
+main {
+	flex-grow: 1;
+	height: 50vh;
 }
 
 
@@ -17,13 +24,12 @@ header {
 	background-color: #373737;
 	text-align: center;
 	padding-top: 1em;
+	height: 15vh;
+	padding-bottom: 0.5em;
 }
 
-footer {
-	background-color: #373737;
-}
 
-h1 {
+header h1 {
 	font-family: 'pokemon';
 	color: #FFF504;
 	-webkit-text-stroke: 1.5px  #444AD2;
@@ -59,6 +65,7 @@ button {
 
 input {
 	margin-bottom: 1em;
+	margin-left: 1em;
 	padding: 8px;
 	border-radius: 10px;
 	background-color: #03809B;
