--- a/Style/pokemoncard.css
+++ b/Style/pokemoncard.css
@@ -1,6 +1,6 @@
 .invisible {
 	visibility: hidden;
-	z-index: -1;
+	z-index: 1;
 }
 
 .your-team-container {
@@ -40,5 +40,20 @@ h2 {
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	color: white;
 	text-align: center;
+	margin: 0.3em;
+	font-size: 28px;
 }
 
+.recruit-more-pokemon {
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-size: 18px;
+}
+
+.recruit-more-pokemon-container {
+	background-color: #444AD2;
+	padding: 1em;
+	margin: 1em;
+	border-radius: 2em;
+	border: solid 2px white;
+	
+}
