--- a/Style/style.css
+++ b/Style/style.css
@@ -82,11 +82,11 @@ button {
 }
 
 input {
-	margin-bottom: 1em;
-	margin-left: 1em;
+	max-width: 15em;
+	margin: 1em;
 	padding: 8px;
 	border-radius: 10px;
-	background-color: #03809B;
+	background-color: #7cb4c1;
 }
 
 label {
