--- a/Style/pokemoncard.css
+++ b/Style/pokemoncard.css
@@ -5,13 +5,12 @@
 }
 
 .pokemon-card-container, .your-team-container  {
-	display: flex;
-	flex-direction: column;
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 	justify-content: center;
-	align-items: center;
-	margin-top: 2em;
-	flex-flow: wrap;
-	
+	gap: 1em;
+	padding: 1em;
+
 }
 
 
@@ -20,10 +19,10 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	width: fit-content;
+	/* width: fit-content; */
 	padding: 1em 3em 1em 3em;
 	border-radius: 10px;
-	margin: 2em;
+	border: 2px solid white;
 	box-shadow: 0px 25px 20px -20px rgba(0, 0, 0, 0.45), 25px 0 20px -20px rgba(0, 0, 0, 0.45);
 
 }
@@ -40,8 +39,10 @@ h2 {
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	color: white;
 	text-align: center;
+	grid-row: 1;
 	margin: 0.3em;
 	font-size: 28px;
+	
 }
 
 
@@ -62,4 +63,7 @@ h2 {
 .info {
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	font-weight: bold;
+	color: white;
+	grid-column-start: 1;
+	grid-column-end: auto;
 }
