--- a/Style/style.css
+++ b/Style/style.css
@@ -3,6 +3,11 @@
 	src: url(/Fonts/Pokemon\ Solid.ttf)
 }
 
+@font-face {
+	font-family: poppins;
+	src: url(/Fonts/Poppins-Light.ttf);
+}
+
 body {
 	background: rgb(117,255,131);
 	background: linear-gradient(90deg, rgba(117,255,131,1) 30%, rgba(3,128,155,1) 100%);
@@ -41,11 +46,16 @@ h1 {
 	
 }
 
+#pikachu {
+	max-width: 20em;
+}
+
 .start-section {
 	margin: 1em;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-family: 'poppins';
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 }
 
 #pokemon-btn {
@@ -88,11 +98,13 @@ h1 {
 
 button {
 	color: white;
+	font-size: 16px;
 	padding: 0.5em;
 	margin-top: 1em;
 	margin-bottom: 1em;
 	background-color: #03809B;
 	border-radius: 10px;
+	font-family: 'poppins';
 }
 
 input {
