--- a/Style/pokemoncard.css
+++ b/Style/pokemoncard.css
@@ -24,7 +24,7 @@
 	padding: 1em 3em 1em 3em;
 	border-radius: 10px;
 	border: 2px solid white;
-
+	transition: transform 0.3s ease-in-out;
 	box-shadow: 0px 25px 20px -20px rgba(0, 0, 0, 0.45), 25px 0 20px -20px rgba(0, 0, 0, 0.45);
 
 }
@@ -64,6 +64,10 @@ h2 {
 	border-radius: 2em;
 	border: solid 2px white;
 	
+}
+
+.added-to-team {
+	transform: scale(1.1)
 }
 
 .pokemon-recruit-btn {
