--- a/Style/style.css
+++ b/Style/style.css
@@ -52,7 +52,7 @@ h1 {
 
 .start-section {
 	margin: 1em;
-	font-family: 'poppins';
+	font-family: 'Poppins', sans-serif;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -104,7 +104,7 @@ button {
 	margin-bottom: 1em;
 	background-color: #03809B;
 	border-radius: 10px;
-	font-family: 'poppins';
+	font-family: 'Poppins', sans-serif;
 }
 
 input {
